# ForzaLiveryStudio

./: .gitignore  CMakeLists.txt  README.md
src/gui/app/: dock_chrome.cpp  dock_chrome.h  main_window.cpp  main_window.h  theme_manager.cpp
src/gui/canvas/: canvas_tools.cpp  canvas_tools.h  native_shape_renderer.cpp  native_shape_renderer.h  project_canvas.cpp  project_canvas.h
src/gui/state/: editor_state.cpp  editor_state.h  editor_state_clipboard.cpp  editor_state_grouping.cpp
src/gui/widgets/: color_panel.cpp  color_panel.h  property_panel.cpp  property_panel.h  shapes_browser_widget.cpp  shapes_browser_widget.h
